# rocket-store-python

./: .gitignore  CITATION.cff  MANIFEST.in  README.md  pyproject.toml
Samples/: README.md  generic_example.py  post.py  queries.py
Samples/Post/: README.md  test.py
scripts/: update-version.sh
src/Rocket_Store.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/Rocketstore/: Rocketstore.py  __init__.py  __version__.py  example.py  test.py  test_glob.py
src/Rocketstore/utils/: GlobToRegexp.py  files.py
tests/: test.py
