[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rocketstore"
version = "0.0.1"
authors = [
  { name="Anton Sychev", email="anton@sychev.xyz" },
]
description = "Using the filesystem as a searchable database."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/klich3/rocket-store-python"
Issues = "https://github.com/klich3/rocket-store-python/issues"